fix: Fix address layout on mobile

--- a/src/features/Address/address.module.styl
+++ b/src/features/Address/address.module.styl
@@ -4,6 +4,10 @@
 .address-container
   $grid()
 
+.address-subcontainer
+  +$below(md)
+    width 100%
+
 header.view-header
   text-align left
   border-bottom 1px solid black
