--- a/src/features/Checkout/checkout.module.styl
+++ b/src/features/Checkout/checkout.module.styl
@@ -76,6 +76,9 @@ header.view-header
 
 .address-container
   $grid()
+.address-subcontainer
+  +$below(md)
+    width 100%
 
 .add-address
   $center(271px)
